unpackaged/main/default/objects/FObjectTwo__c/fields/TestDatetime__c.field-meta.xml
<CustomField>
    <fullName>TestDatetime__c</fullName>
    <label>TestDatetime</label>
    <type>DateTime</type>
</CustomField>