unpackaged/main/default/objects/FObjectTwo__c/fields/TestDecimal__c.field-meta.xml
<CustomField>
    <fullName>TestDecimal__c</fullName>
    <label>TestDecimal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>