unpackaged/main/default/objects/FObjectTwo__c/fields/TestLookup__c.field-meta.xml
<CustomField>
    <fullName>TestLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestLookup</label>
    <referenceTo>FObjectThree__c</referenceTo>
    <relationshipLabel>FObjectTwos</relationshipLabel>
    <relationshipName>FObjectTwos</relationshipName>
    <type>Lookup</type>
</CustomField>