unpackaged/main/default/objects/FObjectTwo__c/fields/TestPercent__c.field-meta.xml
<CustomField>
    <fullName>TestPercent__c</fullName>
    <label>TestPercent</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>