unpackaged/main/default/objects/FObjectTwo__c/fields/TestPhone__c.field-meta.xml
<CustomField>
    <fullName>TestPhone__c</fullName>
    <label>TestPhone</label>
    <type>Phone</type>
</CustomField>