unpackaged/main/default/objects/FObjectTwo__c/fields/TestPicklistA__c.field-meta.xml
<CustomField>
    <fullName>TestPicklistA__c</fullName>
    <description>This field doesn&#39;t have a controlling field and its values are restricted.</description>
    <inlineHelpText>This field doesn&#39;t have a controlling field and its values are restricted.</inlineHelpText>
    <label>TestPicklistA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a0</fullName>
            </value>
            <value>
                <fullName>a1</fullName>
            </value>
            <value>
                <fullName>a2</fullName>
            </value>
            <value>
                <fullName>a3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>