unpackaged/main/default/objects/FObjectTwo__c/fields/TestPicklistB__c.field-meta.xml
<CustomField>
    <fullName>TestPicklistB__c</fullName>
    <description>This field has TestPicklistA as a controlling field and its values are restricted.</description>
    <inlineHelpText>This field has TestPicklistA as a controlling field and its values are restricted.</inlineHelpText>
    <label>TestPicklistB</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TestPicklistA__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>b0</fullName>
            </value>
            <value>
                <fullName>b1</fullName>
            </value>
            <value>
                <fullName>b2</fullName>
            </value>
            <value>
                <fullName>b3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>