unpackaged/main/default/objects/FObjectTwo__c/fields/TestPicklistC__c.field-meta.xml
<CustomField>
    <fullName>TestPicklistC__c</fullName>
    <description>This field has TestPicklistB as a controlling field and its values are restricted.</description>
    <inlineHelpText>This field has TestPicklistB as a controlling field and its values are restricted.</inlineHelpText>
    <label>TestPicklistC</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TestPicklistB__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>c0</fullName>
            </value>
            <value>
                <fullName>c1</fullName>
            </value>
            <value>
                <fullName>c2</fullName>
            </value>
            <value>
                <fullName>c3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>