unpackaged/main/default/objects/FObjectTwo__c/fields/TestPicklistDRequired__c.field-meta.xml
<CustomField>
    <fullName>TestPicklistDRequired__c</fullName>
    <label>TestPicklistDRequired</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>d0</fullName>
            </value>
            <value>
                <fullName>d1</fullName>
            </value>
            <value>
                <fullName>d2</fullName>
            </value>
            <value>
                <fullName>d3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>