unpackaged/main/default/objects/FObjectTwo__c/fields/TestPicklistEUnrestricted__c.field-meta.xml
<CustomField>
    <fullName>TestPicklistEUnrestricted__c</fullName>
    <description>This field doesn&#39;t have a controlling field and its values aren&#39;t restricted.</description>
    <inlineHelpText>This field doesn&#39;t have a controlling field and its values aren&#39;t restricted.</inlineHelpText>
    <label>TestPicklistEUnrestricted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>e0</fullName>
            </value>
            <value>
                <fullName>e1</fullName>
            </value>
            <value>
                <fullName>e2</fullName>
            </value>
            <value>
                <fullName>e3</fullName>
            </value>
            <value>
                <fullName>e4</fullName>
            </value>
            <value>
                <fullName>e5</fullName>
            </value>
            <value>
                <fullName>e6</fullName>
            </value>
            <value>
                <fullName>e7</fullName>
            </value>
            <value>
                <fullName>e8</fullName>
            </value>
            <value>
                <fullName>e9</fullName>
            </value>
            <value>
                <fullName>e10</fullName>
            </value>
            <value>
                <fullName>e11</fullName>
            </value>
            <value>
                <fullName>e12</fullName>
            </value>
            <value>
                <fullName>e13</fullName>
            </value>
            <value>
                <fullName>e14</fullName>
            </value>
            <value>
                <fullName>e15</fullName>
            </value>
            <value>
                <fullName>e16</fullName>
            </value>
            <value>
                <fullName>e17</fullName>
            </value>
            <value>
                <fullName>e18</fullName>
            </value>
            <value>
                <fullName>e19</fullName>
            </value>
            <value>
                <fullName>e20</fullName>
            </value>
            <value>
                <fullName>e21</fullName>
            </value>
            <value>
                <fullName>e22</fullName>
            </value>
            <value>
                <fullName>e23</fullName>
            </value>
            <value>
                <fullName>e24</fullName>
            </value>
            <value>
                <fullName>e25</fullName>
            </value>
            <value>
                <fullName>e26</fullName>
            </value>
            <value>
                <fullName>e27</fullName>
            </value>
            <value>
                <fullName>e28</fullName>
            </value>
            <value>
                <fullName>e29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>