unpackaged/main/default/objects/FObjectTwo__c/fields/TestText__c.field-meta.xml
<CustomField>
    <fullName>TestText__c</fullName>
    <label>TestText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>