unpackaged/main/default/objects/FObjectTwo__c/fields/TestTextUnique__c.field-meta.xml
<CustomField>
    <fullName>TestTextUnique__c</fullName>
    <label>TestTextUnique</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>